unpackaged/main/default/objects/Lead/fields/University__c.field-meta.xml
<CustomField>
    <fullName>University__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Field originally created to track a purchased list of students from the University of South Florida who were denied admission or waitlisted. This field does not indicate that the student has submitted a channel application from the partner school.</description>
    <inlineHelpText>Represents the channel partner school that shared the student&#39;s information with Verto PRIOR to the student submitting a channel application.</inlineHelpText>
    <label>University</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>University</value>
        </filterItems>
        <filterItems>
            <field>Account.Channel_Partner__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (University)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>