unpackaged/main/default/objects/Lead/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low GPA</fullName>
            </value>
            <value>
                <fullName>Behavior</fullName>
            </value>
            <value>
                <fullName>Safety Reasons</fullName>
            </value>
            <value>
                <fullName>Too Young</fullName>
            </value>
            <value>
                <fullName>Too Old</fullName>
            </value>
            <value>
                <fullName>Hard Request for No Contact</fullName>
            </value>
            <value>
                <fullName>Personality Red Flags</fullName>
            </value>
            <value>
                <fullName>Geographic Red Flags</fullName>
            </value>
            <value>
                <fullName>Needs Academic Accommodations</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
                <isActive>false</isActive>
                <label>Duplicate</label>
            </value>
            <value>
                <fullName>Interested after 6 Months</fullName>
                <isActive>false</isActive>
                <label>Interested after 6 Months</label>
            </value>
            <value>
                <fullName>Interested within the next 6 Months</fullName>
                <isActive>false</isActive>
                <label>Interested within the next 6 Months</label>
            </value>
            <value>
                <fullName>International Student</fullName>
                <isActive>false</isActive>
                <label>International Student</label>
            </value>
            <value>
                <fullName>Not Interested At All</fullName>
                <isActive>false</isActive>
                <label>Not Interested At All</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>