unpackaged/main/default/objects/Lead/fields/utm_medium__c.field-meta.xml
<CustomField>
    <fullName>utm_medium__c</fullName>
    <description>The UTM medium of the Unbounce/paid ad form submission that triggered the creation of the lead record. This does not reflect any additional form submissions made after the lead record was already created.</description>
    <label>utm medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>