unpackaged/main/default/objects/Lead/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <description>The UTM source of the Unbounce/paid ad form submission that triggered the creation of the lead record. This does not reflect any additional form submissions made after the lead record was already created.</description>
    <label>UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>