unpackaged/main/default/objects/Lead/fields/YOG_Score__c.field-meta.xml
<CustomField>
    <fullName>YOG_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>YOG Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>