unpackaged/main/default/objects/Lead/fields/z_Address_2__c.field-meta.xml
<CustomField>
    <fullName>z_Address_2__c</fullName>
    <label>z_Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>