unpackaged/main/default/objects/Lead/fields/z_All_About_You__c.field-meta.xml
<CustomField>
    <fullName>z_All_About_You__c</fullName>
    <label>z_All About You</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>