unpackaged/main/default/objects/Lead/fields/z_Application_Pending_Date__c.field-meta.xml
<CustomField>
    <fullName>z_Application_Pending_Date__c</fullName>
    <label>z_Application Pending Date</label>
    <type>Date</type>
</CustomField>