unpackaged/main/default/objects/Lead/fields/z_CalendlyCreated__c.field-meta.xml
<CustomField>
    <fullName>z_CalendlyCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_CalendlyCreated</label>
    <type>Checkbox</type>
</CustomField>