unpackaged/main/default/objects/Lead/fields/z_College_Major_Preference__c.field-meta.xml
<CustomField>
    <fullName>z_College_Major_Preference__c</fullName>
    <inlineHelpText>If undecided, enter &quot;Undecided&quot;</inlineHelpText>
    <label>z_College Major Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>