unpackaged/main/default/objects/Lead/fields/z_College_Previously_Attended__c.field-meta.xml
<CustomField>
    <fullName>z_College_Previously_Attended__c</fullName>
    <inlineHelpText>This field is populated from the student application if the student answered that he/she has previously attended college/university.</inlineHelpText>
    <label>z_College Previously Attended</label>
    <length>50</length>
    <type>Text</type>
</CustomField>