unpackaged/main/default/objects/Lead/fields/z_Conversion_Flag__c.field-meta.xml
<CustomField>
    <fullName>z_Conversion_Flag__c</fullName>
    <defaultValue>true</defaultValue>
    <label>z_Conversion Flag</label>
    <type>Checkbox</type>
</CustomField>