unpackaged/main/default/objects/Lead/fields/z_Convert_Date__c.field-meta.xml
<CustomField>
    <fullName>z_Convert_Date__c</fullName>
    <description>Convert Date</description>
    <label>z_Convert Date</label>
    <type>Date</type>
</CustomField>