unpackaged/main/default/objects/Lead/fields/z_Criminal_Convictions__c.field-meta.xml
<CustomField>
    <fullName>z_Criminal_Convictions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Criminal Convictions</label>
    <type>Checkbox</type>
</CustomField>