unpackaged/main/default/objects/Lead/fields/z_CTW_Additional_Test_Scores__c.field-meta.xml
<CustomField>
    <fullName>z_CTW_Additional_Test_Scores__c</fullName>
    <description>Change the World applicants additional test scores for consideration</description>
    <label>z_CTW Additional Test Scores</label>
    <type>TextArea</type>
</CustomField>