unpackaged/main/default/objects/Lead/fields/z_CTW_First_Semester__c.field-meta.xml
<CustomField>
    <fullName>z_CTW_First_Semester__c</fullName>
    <description>Change the world applicants first semester preference</description>
    <label>z_CTW First Semester</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>South Pacific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>