unpackaged/main/default/objects/Lead/fields/z_Disciplinary_Violation__c.field-meta.xml
<CustomField>
    <fullName>z_Disciplinary_Violation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Disciplinary Violation</label>
    <type>Checkbox</type>
</CustomField>