unpackaged/main/default/objects/Lead/fields/z_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>z_Email_Formula__c</fullName>
    <formula>Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>z_Email</label>
    <type>Text</type>
</CustomField>