unpackaged/main/default/objects/Lead/fields/z_Event_Lead__c.field-meta.xml
<CustomField>
    <fullName>z_Event_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Event Lead</label>
    <type>Checkbox</type>
</CustomField>