unpackaged/main/default/objects/Lead/fields/z_Expressed_Ability_Level__c.field-meta.xml
<CustomField>
    <fullName>z_Expressed_Ability_Level__c</fullName>
    <description>Expressed Ability Level</description>
    <label>z_Expressed Ability Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>