unpackaged/main/default/objects/Lead/fields/z_Fafsa__c.field-meta.xml
<CustomField>
    <fullName>z_Fafsa__c</fullName>
    <label>z_Fafsa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>