unpackaged/main/default/objects/Lead/fields/z_First_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>z_First_Call_Date__c</fullName>
    <description>The date of the first logged call</description>
    <inlineHelpText>The date of the first logged call</inlineHelpText>
    <label>z_First Call Date</label>
    <type>Date</type>
</CustomField>