unpackaged/main/default/objects/Lead/fields/z_First_Generation_Student__c.field-meta.xml
<CustomField>
    <fullName>z_First_Generation_Student__c</fullName>
    <label>z_First Generation Student</label>
    <length>255</length>
    <type>Text</type>
</CustomField>