unpackaged/main/default/objects/Lead/fields/z_First_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>z_First_Name_Formula__c</fullName>
    <formula>FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>z_First Name</label>
    <type>Text</type>
</CustomField>