unpackaged/main/default/objects/Lead/fields/z_Form_Info_is_True_and_Correct__c.field-meta.xml
<CustomField>
    <fullName>z_Form_Info_is_True_and_Correct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Form Info is True and Correct?</label>
    <type>Checkbox</type>
</CustomField>