unpackaged/main/default/objects/Lead/fields/z_Gender__c.field-meta.xml
<CustomField>
    <fullName>z_Gender__c</fullName>
    <label>z_Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Intersex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>