unpackaged/main/default/objects/Lead/fields/z_High_School_Counselor_Email__c.field-meta.xml
<CustomField>
    <fullName>z_High_School_Counselor_Email__c</fullName>
    <description>High School Counselor Email</description>
    <label>z_High School Counselor Email</label>
    <type>Email</type>
</CustomField>