unpackaged/main/default/objects/Lead/fields/z_High_School_Counselor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>z_High_School_Counselor_First_Name__c</fullName>
    <description>High School Counselor First Name</description>
    <label>z_High School Counselor First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>