unpackaged/main/default/objects/Lead/fields/z_High_School_Counselor_Phone__c.field-meta.xml
<CustomField>
    <fullName>z_High_School_Counselor_Phone__c</fullName>
    <label>z_High School Counselor Phone</label>
    <type>Phone</type>
</CustomField>