unpackaged/main/default/objects/Lead/fields/z_High_School_Experience__c.field-meta.xml
<CustomField>
    <fullName>z_High_School_Experience__c</fullName>
    <label>z_High School Experience</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>