unpackaged/main/default/objects/Lead/fields/z_High_School_Name__c.field-meta.xml
<CustomField>
    <fullName>z_High_School_Name__c</fullName>
    <label>z_High School Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>