unpackaged/main/default/objects/Lead/fields/z_High_School_Website__c.field-meta.xml
<CustomField>
    <fullName>z_High_School_Website__c</fullName>
    <label>z_High School Website</label>
    <type>Url</type>
</CustomField>