unpackaged/main/default/objects/Lead/fields/z_Hispanic_or_Latino_a_x__c.field-meta.xml
<CustomField>
    <fullName>z_Hispanic_or_Latino_a_x__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Hispanic or Latino/a/x</label>
    <type>Checkbox</type>
</CustomField>