unpackaged/main/default/objects/Lead/fields/z_Hispanic_or_Latino_a_x_picklist__c.field-meta.xml
<CustomField>
    <fullName>z_Hispanic_or_Latino_a_x_picklist__c</fullName>
    <label>z_Hispanic or Latino/a/x</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>