unpackaged/main/default/objects/Lead/fields/z_Hobbies_and_Activities__c.field-meta.xml
<CustomField>
    <fullName>z_Hobbies_and_Activities__c</fullName>
    <label>z_Hobbies and Activities</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>