unpackaged/main/default/objects/Lead/fields/z_How_did_you_hear_about_Verto__c.field-meta.xml
<CustomField>
    <fullName>z_How_did_you_hear_about_Verto__c</fullName>
    <label>z_How did you hear about Verto?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>