unpackaged/main/default/objects/Lead/fields/z_I_agree_to_Verto_Education_s_ToS__c.field-meta.xml
<CustomField>
    <fullName>z_I_agree_to_Verto_Education_s_ToS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_I agree to Verto Education&#39;s ToS</label>
    <type>Checkbox</type>
</CustomField>