unpackaged/main/default/objects/Lead/fields/z_Interested_in_Verto_Partner_Schools__c.field-meta.xml
<CustomField>
    <fullName>z_Interested_in_Verto_Partner_Schools__c</fullName>
    <label>z_Interested in Verto Partner Schools?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>