unpackaged/main/default/objects/Lead/fields/z_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>z_IP_Address__c</fullName>
    <label>z_IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>