unpackaged/main/default/objects/Lead/fields/z_Is_Cost_a_Concern__c.field-meta.xml
<CustomField>
    <fullName>z_Is_Cost_a_Concern__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Is Cost a Concern?</label>
    <type>Checkbox</type>
</CustomField>