unpackaged/main/default/objects/Lead/fields/z_Last_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>z_Last_Name_Formula__c</fullName>
    <formula>LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>z_Last Name</label>
    <type>Text</type>
</CustomField>