unpackaged/main/default/objects/Lead/fields/z_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>z_Lead_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>z_Lead ID</label>
    <type>Text</type>
</CustomField>