unpackaged/main/default/objects/Lead/fields/z_Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>z_Lead_Number__c</fullName>
    <displayFormat>{0}</displayFormat>
    <externalId>true</externalId>
    <label>z_Lead Number</label>
    <type>AutoNumber</type>
</CustomField>