unpackaged/main/default/objects/Lead/fields/z_New_Lead_Date__c.field-meta.xml
<CustomField>
    <fullName>z_New_Lead_Date__c</fullName>
    <description>New Lead Date</description>
    <label>z_New Lead Date</label>
    <type>Date</type>
</CustomField>