unpackaged/main/default/objects/Lead/fields/z_Old_Interest_Level__c.field-meta.xml
<CustomField>
    <fullName>z_Old_Interest_Level__c</fullName>
    <description>DO NOT USE MOVING FORWARD Old Hubspot Interest Level.</description>
    <label>z_OLD HS Interest Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>