unpackaged/main/default/objects/Lead/fields/z_Open_to_Verto_Marketing__c.field-meta.xml
<CustomField>
    <fullName>z_Open_to_Verto_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Open to Verto Marketing</label>
    <type>Checkbox</type>
</CustomField>